--- a/LadyC/.classpath
+++ b/LadyC/.classpath
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" path="src/main/webapp"/>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -33,12 +46,6 @@
 	<classpathentry kind="lib" path="/home/dovico/jars/hibernatejar/commons-collections-2.1.1.jar"/>
 	<classpathentry kind="lib" path="/home/dovico/jars/hibernatejar/jta.jar"/>
 	<classpathentry kind="lib" path="/home/dovico/jars/hibernatejar/jdbc2_0-stdext.jar"/>
-	<classpathentry kind="src" output="target/classes" path="src">
-		<attributes>
-			<attribute name="optional" value="true"/>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="/home/dovico/jars/hibernate-annotations-3.5.6-Final.jar"/>
 	<classpathentry kind="lib" path="/home/dovico/Downloads/slf4j-log4j12-1.7.25.jar"/>
 	<classpathentry kind="lib" path="/home/dovico/Downloads/log4j-1.2.16.jar"/>
