--- a/LadyC/.classpath
+++ b/LadyC/.classpath
@@ -31,6 +31,7 @@
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/home/dovico/Documents/mysql-connector-java-5.0.8/mysql-connector-java-5.0.8-bin.jar"/>
@@ -58,5 +59,6 @@
 	<classpathentry kind="lib" path="/home/dovico/Downloads/javassist-3.12.1.GA.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="/home/dovico/Downloads/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="/home/dovico/Downloads/jsf-api-1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
