--- a/LadyC/pom.xml
+++ b/LadyC/pom.xml
@@ -31,6 +31,11 @@
     <version>1.2</version>
 </dependency>
 <dependency>
+    <groupId>javax.faces</groupId>
+    <artifactId>jsf-api</artifactId>
+    <version>1.2</version>
+</dependency>
+<dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-annotations</artifactId>
     <version>3.5.6-Final</version>
