--- a/LadyC/WebContent/WEB-INF/web.xml
+++ b/LadyC/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  <servlet>
+<!--   <servlet>
     <description></description>
     <display-name>LoginController</display-name>
     <servlet-name>LoginController</servlet-name>
@@ -101,5 +101,16 @@
   <servlet-mapping>
     <servlet-name>MyAccountController</servlet-name>
     <url-pattern>/views/MyAccountController</url-pattern>
+  </servlet-mapping> -->
+<servlet>
+    <description></description>
+    <display-name>ActionServlet</display-name>
+    <servlet-name>ActionServlet</servlet-name>
+    <servlet-class>com.ecommerce.servlet.ActionServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ActionServlet</servlet-name>
+    <url-pattern>/welcome</url-pattern>
   </servlet-mapping>
+  
 </web-app>
